test/Fail/Issue1886-dont-duplicate-ip.err
Issue1886-dont-duplicate-ip.agda:8.25-29: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue1886-dont-duplicate-ip.agda:8.25-29

Issue1886-dont-duplicate-ip.agda:8.25-29: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue1886-dont-duplicate-ip.agda:8.25-29
